# mopet

./: .gitignore  CMakeLists.txt  ColorVarianceForegroundClassifier.cpp  ColorVarianceForegroundClassifier.h  ForegroundClassifier.h  HSVVarianceForegroundClassifier.cpp  HSVVarianceForegroundClassifier.h  InPainter.cpp  InPainter.h  README.md  TODO_IDEAS.txt  TestForegroundClassifier.cpp  TestForegroundClassifier.h  VarianceForegroundClassifier.cpp  VarianceForegroundClassifier.h  downsample  helper.cpp  helper.h  main.cpp  mopet_multiexec  preprocessor.cpp  preprocessor.h  remover.cpp  remover.h
documentation/: .gitignore  Main.tex  teil1.tex  teil2.tex
